--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,12 @@
 {
   "hosting": {
     "public": "dist/matthias-portfolio/browser",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ]
-  }
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
+  },
+  "rewrites": [
+    {
+      "source": "**",
+      "destination": "/"
+    }
+  ]
 }
